Fix layout for iPhone SE
Means: very small width did not fit well

--- a/src/components/recentArticles.module.css
+++ b/src/components/recentArticles.module.css
@@ -48,7 +48,7 @@
 @media all and (max-width: 1660px) {
   .recentarticles {
     max-width: 960px;
-    padding: 2.5rem 1.5rem 4rem;
+    padding: 2.5rem 1rem 4rem;
   }
 }
 
